<resources>
    <string name="app_name">LSCatalunya</string>
    <string name="login">Login</string>
    <string name="show_map">Show map</string>
    <string name="barcelona">Barcelona</string>
    <string name="girona">Girona</string>
    <string name="lleida">Lleida</string>
    <string name="tarragona">Tarragona</string>
    <string name="all">All</string>
    <string name="schools">Schools</string>
    <string name="others">Others</string>
    <string name="children">Children</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="high_school">High school</string>
    <string name="vocational_training">Vocational training</string>
    <string name="university">University</string>
    <string name="school_photo">School photo</string>
    <string name="connection_error">Could not connect to our services</string>
    <string name="format_error">Center data is corrupted</string>
    <string name="read_error">Could not read center data</string>
    <string name="add_error">Could not add school to our services</string>
    <string name="delete_error">Could not delete school from our services</string>
    <string name="loading_centers">Loading centers from LaSalle Catalunya</string>
    <string name="wait_loading">Wait until centers are loaded</string>
    <string name="show_centers_list">Show centers list</string>
    <string name="address_not_found">Could not load center position</string>
    <string name="centers_not_found">Could not load some center positions</string>
    <string name="wait_refresh">Wait until centers are refreshed</string>
    <string name="load_complete">Centers load was successful!</string>
    <string name="load_incomplete">Centers load was not successful!</string>
    <string-array name="provinces">
        <item>@string/barcelona</item>
        <item>@string/girona</item>
        <item>@string/lleida</item>
        <item>@string/tarragona</item>
    </string-array>
    <string-array name="center_types">
        <item>@string/all</item>
        <item>@string/schools</item>
        <item>@string/others</item>
    </string-array>
    <string name="google_maps_api_key">AIzaSyAprP-uJv4hnhyd_6svpjTT3S75XEp-owo</string>
    <string name="create_new_school">Create a new school</string>
    <string name="school_name">School Name</string>
    <string name="school_address">School Address</string>
    <string-array name="array_provinces">
        <item>Lleida</item>
        <item>Barcelona</item>
        <item>Girona</item>
        <item>Tarragona</item>
    </string-array>
    <string name="description">Description</string>
    <string name="create_school">Create School</string>
    <string name="voc_training">Voc. Training</string>
    <string name="school_state_province">School State/Province</string>
    <string name="login_hint">Username or Email</string>
    <string name="password">Password</string>
    <string name="log_in_button">LOG IN</string>
    <string name="register_button">REGISTER</string>
    <string name="login_fb_button">LOGIN WITH FACEBOOK</string>
    <string name="login_twt_button">LOGIN WITH TWITTER</string>
    <string name="login_gg_button">LOGIN WITH GOOGLE</string>
    <string name="or">OR</string>
    <string name="username_hint">Username</string>
    <string name="firstname_hint">Firstname</string>
    <string name="lastname_hint">Lastname</string>
    <string name="email_hint">Email</string>
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="login_appbar_title">Login for admins</string>
    <string name="register_appbar_title">Register new admin</string>
    <string name="logout">Logout</string>
    <string name="sort">Sort</string>
    <string name="pass_not_match">Passwords don\'t match</string>
    <string name="invalid_param">One or more fields are invalid or already registered</string>
    <string name="alert">Notice</string>
    <string name= "ok">OK</string>
    <string name= "successful_introduction">The introduction of the new school was successful!</string>
    <string name= "wait">Wait…</string>
    <string name= "delete">DELETE</string>
    <string name= "undo">UNDO</string>
    <string name= "delete_item_list">Are you sure you want to delete the item from this list?</string>
    <string name= "yes">YES</string>
    <string name= "no">NO</string>
    <string name= "successful_deletion">The deletion of the school was successful!</string>
    <string name="invalid_user">Invalid user or password</string>
</resources>