<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:padding="16dp"
    android:background="?android:attr/selectableItemBackground">

    <LinearLayout
        android:id="@+id/centerSelectionContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/centerSelectionPhoto">

        <TextView
            android:id="@+id/centerSelectionSchoolName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:textStyle="bold"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/centerSelectionSchoolAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:textStyle="normal"
            android:singleLine="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/centerSelectionChildren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_purple"
                android:fontFamily="@font/roboto"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:text="@string/children"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="4dp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/centerSelectionPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:fontFamily="@font/roboto"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:text="@string/primary"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="4dp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/centerSelectionSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:fontFamily="@font/roboto"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:text="@string/secondary"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="4dp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/centerSelectionHighSchool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_light"
                android:fontFamily="@font/roboto"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:text="@string/high_school"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="4dp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/centerSelectionVocationalTraining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_light"
                android:fontFamily="@font/roboto"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:text="@string/vocational_training"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="4dp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/centerSelectionUniversity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_light"
                android:fontFamily="@font/roboto"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:text="@string/university"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="4dp"
                android:singleLine="true"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/centerSelectionPhoto"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:contentDescription="@string/school_photo"
        android:layout_marginStart="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_item_classroom"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>